[FIX] Button alignment and spacing

--- a/app/components/recipeDetails.component.css
+++ b/app/components/recipeDetails.component.css
@@ -18,7 +18,7 @@
 .recipe-name {
     border-bottom-style: solid;
     border-bottom-width: 10px;
-    border-bottom-color: #E8EAED;
+    border-bottom-color: #A2A3A5;
 }
 
 .bookmark {
